<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="6dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="176dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="110dp"
                android:layout_height="115dp"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/news" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:maxLines="4"
            android:paddingStart="10dp"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/Image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/Image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/tools_title" />

        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_below="@id/title"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="#b3b300"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/Image"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="TextContrastCheck"
            tools:text="@string/tools_category" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_below="@id/Image"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_calender"
            app:layout_constraintStart_toStartOf="@+id/Image"
            app:layout_constraintTop_toBottomOf="@+id/Image" />

        <TextView
            android:id="@+id/date"
            android:layout_width="153dp"
            android:layout_height="38dp"
            android:layout_below="@id/Image"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="#808080"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/Image"
            tools:text="@string/tools_Date" />

        <TextView
            android:id="@+id/source"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_below="@id/Image"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:textColor="#ff8000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="@+id/date"
            tools:text="@string/tools_source" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>